@@ -7,6 +7,7 @@ export(analyzeFolder)
 export(compareSounds)
 export(crossFade)
 export(estimateVTL)
+export(fart)
 export(flatEnv)
 export(getRolloff)
 export(getSmoothContour)
